welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: not found: value cpt
  cpt=0
  ^ColumnByColumn:2: error: not found: value i
i=0
^ColumnByColumn:3: error: not found: value fini
while (!fini){
        ^ColumnByColumn:4: error: not found: value endLine
  while(!endLine){
         ^ColumnByColumn:5: error: not found: value cpt
    ecritMessage(cpt)
                 ^ColumnByColumn:7: error: not found: value cpt
    cpt=cpt+1
    ^ColumnByColumn:9: error: not found: value tpc
  tpc(i)
  ^ColumnByColumn:9: error: not found: value i
  tpc(i)
      ^ColumnByColumn:10: error: not found: value i
  if (i <= getLargeurMonde()){i=i+1}
      ^ColumnByColumn:10: error: not found: value getLargeurMonde
  if (i <= getLargeurMonde()){i=i+1}
           ^ColumnByColumn:10: error: not found: value i
  if (i <= getLargeurMonde()){i=i+1}
                              ^