welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  cpt=0
i=0
while (!fini){
  while(!endLine){
    ecritMessage(cpt)
    avance()
    cpt=cpt+1
  }
  tpc(i)
  if (i <= getLargeurMonde()){i=i+1}
}
}



def tpC(x:Int){
  setPos(x,0)
}

/*
cpt=0
i=0
while (!fini){
  while(!endLine){
    ecritMessage(cpt)
    avance()
    cpt=cpt+1
  }
  tpc(i)
  if (i <= getLargeurMonde()){i=i+1}
} */
